--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,14 @@
   </head>
   <body>
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="contact.html">Contact</a>
+        <a href="index.html">Home</a>
+        <a class="active" href="#contact">Contact</a>
     </div>
-    <h1>Prashant's Website</h1>
-    <p>A website</p>
+    <h1>Contact Info</h1>
+    <p>
+        <a href="mailto:prashantsadoo@gmail.com">Main email</a><br>
+        <a href="mailto:prashantsadoog@gmail.com">Alternate email</a><br>
+        <a href="mailto:sadoop@rpi.edu">School email</a>
+    </p>
   </body>
 </html>
