Update page titles for contact.html and index.html

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         color: white;
       }
     </style>
-    <title>Prashant's Website</title>
+    <title>Contact Info</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
