--- a/index.html
+++ b/index.html
@@ -1,32 +1,6 @@
 <html lang="en">
   <head>
-    <style>
-      body {
-        background-color: white;
-        font-family: Arial, Helvetica, sans-serif;
-        color: black;
-      }
-      .topnav {
-        overflow: hidden;
-        background-color: #333;
-      }
-      .topnav a {
-        float: left;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-      }
-      .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-      }
-      .topnav a.active {
-        background-color: #04AA6D;
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <title>Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
