--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="contact.html">Contact</a>
+      <a href="radio.html">Radio Stuff</a>
     </div>
-    <h1>Prashant's Website</h1>
-    <p>A website</p>
+    <h1>Homepage</h1>
+    <p>Welcome to my website! More to come to the homepage in the future.</p>
   </body>
 </html>
