--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <title>Contact Info</title>
     <meta charset="UTF-8">
